--- a/index.html
+++ b/index.html
@@ -1,37 +1,348 @@
-<!DOCTYPE html>
-<html lang="zh-Hant">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    *, *::before, *::after { box-sizing: border-box; }
-    html, body { margin: 0; padding: 0; max-width: 100%; }
-    body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans TC", Arial, sans-serif; line-height: 1.6; }
-    img { max-width: 100%; height: auto; display: block; }
-    .container { width: 1920px; margin: 0 auto; padding: 16px; }
-    nav a { margin-right: 12px; text-decoration: none; }
-    .grid { display: grid; grid-template-columns: repeat(12, 1fr); gap: 16px; }
-    .col-12 { grid-column: span 12; }
-    @media (min-width: 768px) { .col-md-6 { grid-column: span 6; } }
-    .card { border: 1px solid #e5e7eb; border-radius: 12px; padding: 16px; background: #fff; box-shadow: 0 1px 2px rgba(0,0,0,.04); }
-  </style>
-</head>
-<body>
-  <header class="container" role="banner">
-    <nav aria-label="主選單">
-      <a href="#about">關於我</a>
-      <a href="#projects">作品集</a>
-      <a href="https://example.com/blog">技術部落格</a>
-      <a href="mailto:me@example.com">聯絡我</a>
-    </nav>
-    <h1>你好，我是小明：前端工程師新手之路</h1>
-    <h1>你好，我是小明：前端工程師新手之路</h1>
-    <p>歡迎來到我的個人網站！這裡整理了學習紀錄、Side Project 與實作心得。</p>
-  </header>
+<!DOCTYPE html> <html lang="zh-Hant"> <head> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <title>Your Name · Frontend Dev — 個人品牌網站</title> <meta name="description" content="個人品牌網站範本：介紹前端工程師背景、技能、作品集與聯絡資訊。此單檔 index.html 為骨架環境，已預留 HTML/CSS 插槽便於後續以 Section SDD 替換完整內容。" /> <style> /* CSS:BASE-START */ /* 全站共用基本設定（請勿使用 ID 選擇器）*/ :root{ --bg:#0b1320; /* 深藍背景 */ --panel:#0f2740; --muted:#9aa7b2; --text:#e6eef6; --accent:#2aa1d8; /* 主色：偏青色 */ --container-max:1100px; }
+*, *::before, *::after { box-sizing: border-box; }
+html,body { height:100%; }
+body {
+  margin:0;
+  background:var(--bg);
+  color:var(--text);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans TC", "PingFang TC", "Microsoft JhengHei", sans-serif;
+  line-height:1.6;
+  -webkit-font-smoothing:antialiased;
+  -moz-osx-font-smoothing:grayscale;
+  overflow-x:hidden; /* 避免水平滾動 */
+  padding-top:64px; /* 預留 sticky header 高度（mobile first） */
+}
 
-  <footer class="container" role="contentinfo">
-    <p>© 2025 My Portfolio · <a href="#">GitHub</a></p>
-    <img src="https://source.unsplash.com/600x200/?technology,abstract" alt="">
-  </footer>
-</body>
-</html>
+.page { min-height:100vh; display:flex; flex-direction:column; }
+
+.container {
+  width:100%;
+  max-width:var(--container-max);
+  margin:0 auto;
+  padding:0 16px;
+}
+
+img { max-width:100%; height:auto; display:block; border-radius:8px; }
+
+a { color:var(--accent); text-decoration:none; }
+a:hover, a:focus { text-decoration:underline; }
+
+.sr-only { position:absolute; left:-10000px; top:auto; width:1px; height:1px; overflow:hidden; }
+
+/* 小按鈕樣式 */
+.btn {
+  display:inline-block;
+  padding:10px 14px;
+  border-radius:8px;
+  background:linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.01));
+  color:var(--text);
+  border:1px solid rgba(255,255,255,0.04);
+  font-weight:600;
+  text-decoration:none;
+}
+.btn-outline {
+  background:transparent;
+  border:1px solid rgba(255,255,255,0.08);
+  color:var(--muted);
+}
+
+/* utilities */
+.lead { color:var(--muted); }
+.muted { color:var(--muted); font-size:0.95rem; }
+
+/* CSS:BASE-END */
+
+
+/* CSS:HERO-START */
+/* Hero 區樣式（唯一 h1 放在此區）*/
+.section-hero {
+  padding:40px 0;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:linear-gradient(180deg, rgba(10,20,30,0.6), transparent);
+}
+.hero-inner {
+  width:100%;
+  display:flex;
+  gap:20px;
+  align-items:center;
+  justify-content:space-between;
+  flex-direction:column;
+  text-align:center;
+}
+.hero-copy { max-width:780px; }
+.hero-title {
+  margin:0 0 8px 0;
+  font-size:1.6rem;
+  letter-spacing:0.2px;
+}
+.hero-sub {
+  margin:0 0 16px 0;
+  font-size:1rem;
+  color:var(--muted);
+}
+.hero-cta { display:flex; gap:12px; justify-content:center; flex-wrap:wrap; }
+
+.hero-image {
+  width:100%;
+  max-width:420px;
+  margin-top:20px;
+}
+
+/* CSS:HERO-END */
+
+
+/* CSS:ABOUT-START */
+.section-about {
+  padding:36px 0;
+  background:transparent;
+}
+.about-grid {
+  display:block;
+  gap:20px;
+}
+.about-card {
+  background:var(--panel);
+  padding:18px;
+  border-radius:12px;
+  border:1px solid rgba(255,255,255,0.03);
+}
+.section-title {
+  margin:0 0 12px 0;
+  font-size:1.1rem;
+  color:var(--text);
+}
+/* CSS:ABOUT-END */
+
+
+/* CSS:SKILLS-START */
+.section-skills {
+  padding:32px 0;
+}
+.skill-list {
+  display:flex;
+  gap:10px;
+  flex-wrap:wrap;
+}
+.skill-item {
+  padding:8px 10px;
+  border-radius:8px;
+  background:rgba(255,255,255,0.03);
+  border:1px solid rgba(255,255,255,0.02);
+  font-size:0.95rem;
+  color:var(--muted);
+}
+/* CSS:SKILLS-END */
+
+
+/* CSS:PROJECTS-START */
+.section-projects {
+  padding:32px 0;
+}
+.projects-grid {
+  display:grid;
+  grid-template-columns:1fr;
+  gap:16px;
+}
+.project-card {
+  background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+  padding:14px;
+  border-radius:10px;
+  border:1px solid rgba(255,255,255,0.03);
+}
+.project-title { font-weight:700; margin:0 0 8px 0; }
+.project-desc { margin:0; color:var(--muted); font-size:0.95rem; }
+
+/* CSS:PROJECTS-END */
+
+
+/* CSS:CONTACT-START */
+.section-contact {
+  padding:40px 0 64px 0;
+}
+.contact-list { display:flex; gap:12px; flex-direction:column; }
+.contact-item { display:flex; gap:12px; align-items:center; color:var(--muted); }
+.contact-item a { color:var(--accent); }
+/* CSS:CONTACT-END */
+
+
+/* CSS:RWD-START */
+/* 手機優先：在更寬螢幕下調整版面 */
+.site-header {
+  position:sticky;
+  top:0;
+  z-index:50;
+  backdrop-filter: blur(6px);
+  background:linear-gradient(180deg, rgba(6,12,20,0.6), rgba(6,12,20,0.35));
+  border-bottom:1px solid rgba(255,255,255,0.02);
+  height:64px;
+  display:flex;
+  align-items:center;
+}
+
+.nav {
+  width:100%;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  gap:12px;
+}
+.nav-left { display:flex; align-items:center; gap:12px; }
+.logo { color:var(--text); font-weight:700; font-size:0.98rem; letter-spacing:0.4px; }
+.nav-right { display:flex; gap:12px; align-items:center; }
+.nav-link { color:var(--muted); font-size:0.95rem; padding:8px 10px; border-radius:8px; }
+.nav-link:hover { color:var(--text); background:rgba(255,255,255,0.02); }
+
+@media (min-width: 480px){
+  .hero-title { font-size:2rem; }
+  .hero-inner { flex-direction:row; text-align:left; align-items:center; }
+  .hero-copy { flex:1; }
+  .hero-image { margin-top:0; }
+  .about-grid { display:grid; grid-template-columns:1fr 320px; align-items:start; }
+  .projects-grid { grid-template-columns: repeat(2, 1fr); }
+}
+
+@media (min-width: 768px){
+  body { padding-top:72px; }
+  .site-header { height:72px; }
+  .container { padding:0 24px; }
+  .hero-title { font-size:2.4rem; }
+  .projects-grid { grid-template-columns: repeat(2, 1fr); gap:20px; }
+}
+
+@media (min-width: 1100px){
+  .projects-grid { grid-template-columns: repeat(3, 1fr); }
+  .about-grid { grid-template-columns: 1fr 380px; }
+}
+/* CSS:RWD-END */
+</style> </head> <body> <div class="page"> <header class="site-header"> <div class="container"> <nav class="nav" aria-label="主要導覽"> <div class="nav-left"> <div class="logo">Your Name · Frontend Dev</div> </div> <div class="nav-right" role="navigation" aria-label="頁面區塊連結"> <a class="nav-link" href="#hero">首頁</a> <a class="nav-link" href="#about">關於我</a> <a class="nav-link" href="#skills">技能</a> <a class="nav-link" href="#projects">作品集</a> <a class="nav-link" href="#contact">聯絡我</a> </div> </nav> </div> </header>
+  <main>
+  <!-- SECTION:HERO-START -->
+  <section id="hero" class="section section-hero" aria-labelledby="hero-heading">
+    <div class="container">
+      <div class="hero-inner">
+        <div class="hero-copy">
+          <h1 id="hero-heading" class="hero-title">個人品牌 - 前端工程師骨架範本</h1>
+          <p class="hero-sub lead">此為個人網站骨架（Phase 1）。未來會放置一句簡短自我介紹、職稱與行動呼籲（瀏覽作品集 / 下載履歷）。</p>
+          <p class="muted">之後會用 Section SDD 的 Prompt 產生正式文案與版面，再把整個 section 整段貼回取代本區塊。</p>
+
+          <div class="hero-cta" aria-hidden="false">
+            <a class="btn" href="#projects">查看作品集</a>
+            <a class="btn btn-outline" href="mailto:hello@example.com">寄信給我</a>
+          </div>
+        </div>
+
+        <div class="hero-image" aria-hidden="false">
+          <img src="https://source.unsplash.com/800x600/?developer,laptop,workspace" alt="在筆電前撰寫程式碼的前端開發者" loading="lazy" />
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- SECTION:HERO-END -->
+
+  <!-- SECTION:ABOUT-START -->
+  <section id="about" class="section section-about" aria-labelledby="about-heading">
+    <div class="container">
+      <div class="about-grid">
+        <div class="about-card">
+          <h2 id="about-heading" class="section-title">關於我（之後會用 Section SDD 替換）</h2>
+          <p class="muted">這裡目前是 About 區的占位內容，會在 Phase 2 使用 Section SDD 產生更完整的個人介紹（含經歷、專長、簡短敘述）。</p>
+          <p class="muted">之後會用 Section SDD 的 Prompt 產生新的 section，請把新的 section 程式碼整段貼在這兩個註解中間，完全取代現在這一區。</p>
+        </div>
+
+        <aside class="about-card" aria-hidden="false">
+          <h3 class="section-title">形象示意圖</h3>
+          <img src="https://images.unsplash.com/photo-1523475496153-3d6cc8f0f96f?auto=format&fit=crop&w=800&q=60" alt="辦公桌與筆電的工作空間" loading="lazy" />
+        </aside>
+      </div>
+    </div>
+  </section>
+  <!-- SECTION:ABOUT-END -->
+
+  <!-- SECTION:SKILLS-START -->
+  <section id="skills" class="section section-skills" aria-labelledby="skills-heading">
+    <div class="container">
+      <h2 id="skills-heading" class="section-title">技能（占位）</h2>
+      <p class="muted">此區為技能占位，未來會列出主要技術棧、工具與熟練度。請以 Section SDD 產出詳細內容後，整段貼回覆蓋在這兩個註解之間。</p>
+
+      <div class="skill-list" aria-hidden="false">
+        <span class="skill-item">HTML5</span>
+        <span class="skill-item">CSS3</span>
+        <span class="skill-item">RWD</span>
+        <span class="skill-item">Accessibility</span>
+        <span class="skill-item">Performance</span>
+        <span class="skill-item">Design Systems</span>
+      </div>
+    </div>
+  </section>
+  <!-- SECTION:SKILLS-END -->
+
+  <!-- SECTION:PROJECTS-START -->
+  <section id="projects" class="section section-projects" aria-labelledby="projects-heading">
+    <div class="container">
+      <h2 id="projects-heading" class="section-title">作品集（占位）</h2>
+      <p class="muted">此區為作品集占位，未來會以卡片或案例頁顯示完整專案說明與連結。請用 Section SDD 產生正式內容並整段貼回替換。</p>
+
+      <div class="projects-grid">
+        <article class="project-card">
+          <h3 class="project-title">範例專案 A</h3>
+          <p class="project-desc">占位描述：專案簡介、使用技術、角色與連結（例如 GitHub / Demo）。</p>
+        </article>
+
+        <article class="project-card">
+          <h3 class="project-title">範例專案 B</h3>
+          <p class="project-desc">占位描述：專案簡介、使用技術、角色與連結（例如 GitHub / Demo）。</p>
+        </article>
+
+        <article class="project-card">
+          <h3 class="project-title">範例專案 C</h3>
+          <p class="project-desc">占位描述：專案簡介、使用技術、角色與連結（例如 GitHub / Demo）。</p>
+        </article>
+      </div>
+    </div>
+  </section>
+  <!-- SECTION:PROJECTS-END -->
+
+  <!-- SECTION:CONTACT-START -->
+  <section id="contact" class="section section-contact" aria-labelledby="contact-heading">
+    <div class="container">
+      <h2 id="contact-heading" class="section-title">聯絡我（占位）</h2>
+      <p class="muted">此處為聯絡方式占位。以下提供範例連結：郵件、電話與專業社群連結。請在 Phase 2 用 Section SDD 產生更完整內容，並將新的 section 程式碼整段貼回替換這裡。</p>
+
+      <div class="contact-list" aria-hidden="false">
+        <div class="contact-item">
+          <strong class="muted">Email：</strong>
+          <a href="mailto:hello@example.com">hello@example.com</a>
+        </div>
+
+        <div class="contact-item">
+          <strong class="muted">電話：</strong>
+          <a href="tel:+886900000000">+886 900 000 000</a>
+        </div>
+
+        <div class="contact-item">
+          <strong class="muted">GitHub：</strong>
+          <a href="https://github.com/yourname" target="_blank" rel="noopener">github.com/yourname</a>
+        </div>
+
+        <div class="contact-item">
+          <strong class="muted">LinkedIn：</strong>
+          <a href="https://www.linkedin.com/in/yourname" target="_blank" rel="noopener">linkedin.com/in/yourname</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- SECTION:CONTACT-END -->
+
+</main>
+
+<footer class="site-footer" role="contentinfo" aria-label="頁尾">
+  <div class="container" style="padding:20px 0; border-top:1px solid rgba(255,255,255,0.02); margin-top:auto;">
+    <div style="display:flex; flex-direction:column; gap:8px;">
+      <div class="muted" style="font-size:0.95rem;">© <span aria-hidden="true">Your Name</span> · Frontend Dev — 版權所有</div>
+      <div class="muted" style="font-size:0.85rem;">此檔案為 single-file index.html 骨架，所有主要區塊已加註 SECTION 插槽與 CSS 插槽，供開發者以 Section SDD 完整替換內容。</div>
+    </div>
+  </div>
+</footer>
+</div> </body> </html>
