--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html> <html lang="zh-Hant"> <head> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <title>Your Name · Frontend Dev — 個人品牌網站</title> <meta name="description" content="個人品牌網站範本：介紹前端工程師背景、技能、作品集與聯絡資訊。此單檔 index.html 為骨架環境，已預留 HTML/CSS 插槽便於後續以 Section SDD 替換完整內容。" /> <style> /* CSS:BASE-START */ /* 全站共用基本設定（請勿使用 ID 選擇器）*/ :root{ --bg:#0b1320; /* 深藍背景 */ --panel:#0f2740; --muted:#9aa7b2; --text:#e6eef6; --accent:#2aa1d8; /* 主色：偏青色 */ --container-max:1100px; }
+
 *, *::before, *::after { box-sizing: border-box; }
 html,body { height:100%; }
+
 body {
   margin:0;
   background:var(--bg);
@@ -9,8 +11,8 @@ body {
   line-height:1.6;
   -webkit-font-smoothing:antialiased;
   -moz-osx-font-smoothing:grayscale;
-  overflow-x:hidden; /* 避免水平滾動 */
-  padding-top:64px; /* 預留 sticky header 高度（mobile first） */
+  overflow-x:hidden;
+  padding-top:64px;
 }
 
 .page { min-height:100vh; display:flex; flex-direction:column; }
@@ -22,12 +24,21 @@ body {
   padding:0 16px;
 }
 
+/* ⭐【新增】避免 320px 出現水平捲動 */
+@media (max-width: 360px) {
+  .container {
+    padding-left: 12px;   /* ⭐修改處 */
+    padding-right: 12px;  /* ⭐修改處 */
+  }
+}
+
 img { max-width:100%; height:auto; display:block; border-radius:8px; }
 
 a { color:var(--accent); text-decoration:none; }
 a:hover, a:focus { text-decoration:underline; }
 
 .sr-only { position:absolute; left:-10000px; top:auto; width:1px; height:1px; overflow:hidden; }
+
 
 /* 小按鈕樣式 */
 .btn {
